cmake_minimum_required(VERSION 2.8)

project(crown-tests)

add_executable(allocators allocators.cpp)
add_executable(containers containers.cpp)
add_executable(compressors compressors.cpp)
add_executable(strings strings.cpp)
add_executable(paths paths.cpp)
add_executable(dynamic-strings dynamic-strings.cpp)
add_executable(json json.cpp)
add_executable(events events.cpp)

target_link_libraries(allocators crown)
target_link_libraries(containers crown)
target_link_libraries(compressors crown)
target_link_libraries(strings crown)
target_link_libraries(paths crown)
target_link_libraries(dynamic-strings crown)
target_link_libraries(json crown)
target_link_libraries(events crown)

install (TARGETS allocators DESTINATION test)
install (TARGETS containers DESTINATION test)
install (TARGETS compressors DESTINATION test)
install (TARGETS strings DESTINATION test)
install (TARGETS paths DESTINATION test)
install (TARGETS dynamic-strings DESTINATION test)
install (TARGETS json DESTINATION test)
install (TARGETS events DESTINATION test)

